--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
     "core-js": "^2.4.1",
+    "gasparesganga-jquery-loading-overlay": "^1.5.3",
     "ionicons": "^2.0.1",
     "jquery": "^3.2.1",
     "jquery.transit": "^0.9.12",
