add product function

--- a/package.json
+++ b/package.json
@@ -22,11 +22,14 @@
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
     "core-js": "^2.4.1",
+    "font-awesome": "^4.7.0",
     "gasparesganga-jquery-loading-overlay": "^1.5.3",
     "ionicons": "^2.0.1",
     "jquery": "^3.2.1",
     "jquery.transit": "^0.9.12",
+    "ngx-progressbar": "^2.0.8",
     "notyf": "^2.0.1",
+    "primeng": "^4.2.1",
     "rxjs": "^5.4.2",
     "uikit": "^3.0.0-beta.30",
     "zone.js": "^0.8.14"
