--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^4.2.4",
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
+    "@types/lodash": "^4.14.77",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
     "gasparesganga-jquery-loading-overlay": "^1.5.3",
