cleanup, refactoring, remove primeng, add ng2uiautocomplete, change routes to useHash

--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@
 /out-tsc
 
 # dependencies
-/node_modules
+node_modules
 
 # IDEs and editors
 /.idea
@@ -32,6 +32,7 @@
 npm-debug.log
 testem.log
 package-lock.json
+yarn.lock
 /typings
 
 # e2e
