--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,4 @@
+dist: trusty
 sudo: required
 language: node_js
 node_js:
@@ -12,4 +13,5 @@ install:
 cache:
   yarn: true
 script:
-- yarn test
+- export CHROME_BIN=chromium-browser
+- xvfb-run -a yarn test:ci
