--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,25 @@
-dist: trusty
 sudo: required
+dist: trusty
+addons:
+  apt:
+    sources:
+      - google-chrome
+    packages:
+      - google-chrome-stable
 language: node_js
 node_js:
-- '7'
+  - '7'
 before_install:
-- sudo apt-key adv --fetch-keys http://dl.yarnpkg.com/debian/pubkey.gpg
-- echo "deb http://dl.yarnpkg.com/debian/ stable main" | sudo tee /etc/apt/sources.list.d/yarn.list
-- sudo apt-get update -qq
-- sudo apt-get install -y -qq yarn
+  - sudo apt-key adv --fetch-keys http://dl.yarnpkg.com/debian/pubkey.gpg
+  - echo "deb http://dl.yarnpkg.com/debian/ stable main" | sudo tee /etc/apt/sources.list.d/yarn.list
+  - sudo apt-get update -qq
+  - sudo apt-get install -y -qq yarn
 install:
-- yarn
+  - yarn
 cache:
   yarn: true
+before_script:
+  - export DISPLAY=:99.0
+  - sh -e /etc/init.d/xvfb start
 script:
-- export CHROME_BIN=chromium-browser
-- xvfb-run -a yarn test:ci
+  - yarn test
