appveyor added, travis update maybe latest

--- a/package.json
+++ b/package.json
@@ -78,10 +78,9 @@
     "ng:serve": "ng serve",
     "postinstall": "electron-builder install-app-deps",
     "prestart": "run-s build:app",
-    "release": "run-s -l \"builder -p onTagOrDraft\"",
+    "release": "run-s -l \"build {@} -p always\" --",
     "start": "run-s electron",
-    "test": "run-s ng:e2e ng:lint ng:test",
-    "test:ci": "run-s -l \"ng:e2e --no-progress --config=protractor-ci.conf.js\" ng:lint -l \"ng:test --single-run --no-progress --browser=ChromeNoSandbox\""
+    "test": "run-s ng:e2e ng:lint ng:test"
   },
   "private": true,
   "dependencies": {
