this is end at least

--- a/package.json
+++ b/package.json
@@ -69,11 +69,11 @@
     "build:installer": "run-s \"builder {@}\" --",
     "builder": "build",
     "electron": "electron app/main.js",
-    "icons": "icon-gen -r -i src/assets/storaji.svg -o src/assets/icons -n ico=storaji,icns=storaji",
+    "icons": "icon-gen -i src/assets/storaji.svg -o src/assets/icons -n ico=storaji,icns=storaji",
     "ng": "ng",
     "ng:build": "ng build",
-    "ng:e2e": "ng e2e",
-    "ng:test": "ng test --watch=false",
+    "ng:e2e": "ng e2e --no-progress",
+    "ng:test": "ng test --watch=false --no-progress",
     "ng:lint": "ng lint",
     "ng:serve": "ng serve",
     "postinstall": "electron-builder install-app-deps",
