--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 /app
 /tmp
 /out-tsc
+/src/assets/icons
 
 # dependencies
 node_modules
@@ -32,8 +33,6 @@ node_modules
 /libpeerconnection.log
 npm-debug.log
 testem.log
-package-lock.json
-yarn.lock
 /typings
 
 # e2e
