--- a/.travis.yml
+++ b/.travis.yml
@@ -58,16 +58,8 @@ before_script:
 
 script:
   - yarn test
-  - |
-    if [ "$TRAVIS_OS_NAME" = "linux" ]; then
-      yarn release -l
-    else
-      yarn release -m
-    fi
-
-branches:
-  only:
-    - master
+  - if [ "$TRAVIS_OS_NAME" = "linux" ] && [[ "$TRAVIS_BRANCH" = "master" ]]; then yarn release -l; fi;
+  - if [ "$TRAVIS_OS_NAME" = "osx" ] && [[ "$TRAVIS_BRANCH" = "master" ]]; then yarn release -m; fi;
 
 env:
   global:
