--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "storaji",
-  "version": "1.0.0-beta.4",
+  "version": "1.0.0-beta.5",
   "license": "MIT",
   "description": "Manage your company stocks with us.",
   "main": "app/main.js",
@@ -98,6 +98,7 @@
     "@ngx-translate/core": "^8.0.0",
     "@ngx-translate/http-loader": "^2.0.0",
     "@types/lodash": "^4.14.77",
+    "@types/tus-js-client": "^1.4.1",
     "core-js": "^2.4.1",
     "electron-is-dev": "0.3.0",
     "electron-log": "2.2.12",
@@ -114,6 +115,7 @@
     "offline-js": "^0.7.19",
     "pdfmake": "^0.1.33",
     "rxjs": "^5.4.2",
+    "tus-js-client": "^1.4.5",
     "uikit": "^3.0.0-beta.30",
     "zone.js": "^0.8.14"
   },
