--- a/package.json
+++ b/package.json
@@ -72,16 +72,16 @@
     "icons": "icon-gen -i src/assets/storaji.svg -o src/assets/icons -n ico=storaji,icns=storaji",
     "ng": "ng",
     "ng:build": "ng build",
-    "ng:e2e": "ng e2e --no-progress --webdriver-update false",
+    "ng:e2e": "ng e2e --no-progress",
     "ng:test": "ng test --watch=false --no-progress",
     "ng:lint": "ng lint",
     "ng:serve": "ng serve",
     "postinstall": "electron-builder install-app-deps",
     "prestart": "run-s build:app",
-    "pretest": "webdriver-manager update --versions.chrome=2.34",
+    "webdriver-update": "webdriver-manager update --versions.chrome=2.34",
     "release": "run-s -l \"build {@} -p always\" --",
     "start": "run-s electron",
-    "test": "run-s ng:e2e ng:lint ng:test"
+    "test": "run-s \"ng:e2e {@}\" ng:lint ng:test --"
   },
   "private": true,
   "dependencies": {
