--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "storaji",
   "version": "1.0.0-beta.5",
   "license": "MIT",
-  "description": "Manage your company stocks with us.",
+  "description": "The Light/Responsive Inventory Management System.",
   "main": "app/main.js",
   "author": {
     "name": "Indomaxim Technology",
