--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "storaji",
-  "version": "1.0.0-beta.6",
+  "version": "1.0.0-beta.7",
   "license": "MIT",
   "description": "The Light/Responsive Inventory Management System.",
   "main": "app/main.js",
@@ -101,9 +101,9 @@
     "@types/lodash": "^4.14.77",
     "@types/tus-js-client": "^1.4.1",
     "core-js": "^2.4.1",
-    "electron-is-dev": "0.3.0",
-    "electron-log": "2.2.12",
-    "electron-updater": "2.16.3",
+    "electron-is-dev": "~0.3.0",
+    "electron-log": "~2.2.14",
+    "electron-updater": "~2.19.1",
     "font-awesome": "^4.7.0",
     "gasparesganga-jquery-loading-overlay": "^1.5.3",
     "ionicons": "^2.0.1",
@@ -111,7 +111,6 @@
     "jquery.transit": "^0.9.12",
     "ngx-progressbar": "^2.1.1",
     "notyf": "^2.0.1",
-    "npm-run-all": "^4.1.2",
     "numeral": "^2.0.6",
     "offline-js": "^0.7.19",
     "pdfmake": "^0.1.33",
@@ -128,8 +127,8 @@
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
     "codelyzer": "~3.1.1",
-    "electron": "~1.7.9",
-    "electron-builder": "19.49.2",
+    "electron": "~1.7.10",
+    "electron-builder": "~19.54.0",
     "icon-gen": "^1.2.0",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
@@ -139,6 +138,7 @@
     "karma-coverage-istanbul-reporter": "^1.2.1",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "npm-run-all": "^4.1.2",
     "protractor": "~5.1.2",
     "ts-node": "~3.2.0",
     "tslint": "~5.3.2",
