lets make it work first

--- a/package.json
+++ b/package.json
@@ -85,68 +85,62 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^4.2.4",
-    "@angular/common": "^4.2.4",
-    "@angular/compiler": "^4.2.4",
-    "@angular/core": "^4.2.4",
-    "@angular/forms": "^4.2.4",
-    "@angular/http": "^4.2.4",
-    "@angular/platform-browser": "^4.2.4",
-    "@angular/platform-browser-dynamic": "^4.2.4",
-    "@angular/router": "^4.2.4",
-    "@fengyuanchen/datepicker": "^0.6.3",
-    "@ngui/auto-complete": "^0.16.0",
-    "@ngx-translate/core": "^8.0.0",
-    "@ngx-translate/http-loader": "^2.0.0",
-    "@types/highcharts": "^5.0.16",
-    "@types/lodash": "^4.14.77",
-    "@types/tus-js-client": "^1.4.1",
+    "@angular/animations": "~8.2.14",
+    "@angular/common": "~8.2.14",
+    "@angular/compiler": "~8.2.14",
+    "@angular/core": "~8.2.14",
+    "@angular/forms": "~8.2.14",
+    "@angular/http": "^7.2.16",
+    "@angular/platform-browser": "~8.2.14",
+    "@angular/platform-browser-dynamic": "~8.2.14",
+    "@angular/router": "~8.2.14",
+    "@fengyuanchen/datepicker": "~0.6.3",
+    "@ngui/auto-complete": "^2.0.0",
+    "@ngx-progressbar/core": "^5.3.2",
+    "@ngx-progressbar/http": "^5.3.2",
+    "@ngx-translate/core": "^11.0.1",
+    "@ngx-translate/http-loader": "^4.0.0",
     "angular2-highcharts": "^0.5.5",
-    "core-js": "^2.4.1",
-    "electron-is-dev": "~0.3.0",
-    "electron-log": "~2.2.14",
-    "electron-updater": "~2.19.1",
-    "font-awesome": "^4.7.0",
-    "gasparesganga-jquery-loading-overlay": "^1.5.3",
-    "highcharts": "^6.0.6",
-    "ionicons": "^2.0.1",
-    "jquery": "^3.2.1",
+    "font-awesome": "~4.7.0",
+    "gasparesganga-jquery-loading-overlay": "~1.5.3",
+    "highcharts": "~6.0.6",
+    "ionicons": "~2.0.1",
+    "jquery": "^3.4.1",
     "jquery.transit": "^0.9.12",
-    "lodash": "^4.17.5",
-    "moment": "^2.20.1",
+    "moment": "^2.24.0",
     "ngx-progressbar": "^2.1.1",
-    "notyf": "^2.0.1",
+    "notyf": "~2.0.1",
     "numeral": "^2.0.6",
     "offline-js": "^0.7.19",
-    "pdfmake": "^0.1.33",
-    "rxjs": "^5.4.2",
-    "tus-js-client": "^1.4.5",
-    "uikit": "^3.0.0-beta.30",
-    "zone.js": "^0.8.14"
+    "pdfmake": "^0.1.63",
+    "rxjs": "~6.4.0",
+    "rxjs-compat": "^6.5.4",
+    "tslib": "^1.10.0",
+    "tus-js-client": "^1.8.0",
+    "uikit": "~3.0.0-beta.30",
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular/cli": "1.4.2",
-    "@angular/compiler-cli": "^4.2.4",
-    "@angular/language-service": "^4.2.4",
-    "@types/jasmine": "~2.5.53",
-    "@types/jasminewd2": "~2.0.2",
-    "@types/node": "~6.0.60",
-    "codelyzer": "~3.1.1",
+    "@angular-devkit/build-angular": "~0.803.22",
+    "@angular/cli": "~8.3.22",
+    "@angular/compiler-cli": "~8.2.14",
+    "@angular/language-service": "~8.2.14",
+    "@types/jasmine": "~3.3.8",
+    "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
+    "codelyzer": "^5.0.0",
     "electron": "~1.7.10",
     "electron-builder": "~19.54.0",
-    "icon-gen": "^1.2.0",
-    "jasmine-core": "~2.6.2",
-    "jasmine-spec-reporter": "~4.1.0",
-    "karma": "~1.7.0",
-    "karma-chrome-launcher": "~2.1.1",
-    "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "^1.2.1",
-    "karma-jasmine": "~1.1.0",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "npm-run-all": "^4.1.2",
-    "protractor": "~5.1.2",
-    "ts-node": "~3.2.0",
-    "tslint": "~5.3.2",
-    "typescript": "~2.3.3"
+    "jasmine-core": "~3.4.0",
+    "jasmine-spec-reporter": "~4.2.1",
+    "karma": "~4.1.0",
+    "karma-chrome-launcher": "~2.2.0",
+    "karma-coverage-istanbul-reporter": "~2.0.1",
+    "karma-jasmine": "~2.0.1",
+    "karma-jasmine-html-reporter": "^1.4.0",
+    "protractor": "~5.4.0",
+    "ts-node": "~7.0.0",
+    "tslint": "~5.15.0",
+    "typescript": "~3.5.3"
   }
 }
