--- a/.gitignore
+++ b/.gitignore
@@ -2,13 +2,17 @@
 
 # compiled output
 /dist
-/app
 /tmp
 /out-tsc
-/src/assets/icons
+# Only exists if Bazel was run
+/bazel-out
 
 # dependencies
-node_modules
+/node_modules
+
+# profiling files
+chrome-profiler-events*.json
+speed-measure-plugin*.json
 
 # IDEs and editors
 /.idea
@@ -25,6 +29,7 @@ node_modules
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
+.history/*
 
 # misc
 /.sass-cache
@@ -32,12 +37,9 @@ node_modules
 /coverage
 /libpeerconnection.log
 npm-debug.log
+yarn-error.log
 testem.log
 /typings
-
-# e2e
-/e2e/*.js
-/e2e/*.map
 
 # System Files
 .DS_Store
